@@ -1,3 +1,7 @@
+2002-07-28  Han-Wen  <hanwen@cs.uu.nl>
+
+	* input/test/broken-spanner-adjustment.ly: new file.
+
 2002-07-27  Mats Bengtsson  <mats.bengtsson@s3.kth.se>
 
 	* scripts/lilypond-book.py: Handle printfilename also together
